--- a/integration/xibo_templates/class-content.html
+++ b/integration/xibo_templates/class-content.html
@@ -1,1 +1,4 @@
-<p style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p style=\"text-align: right;\"><span style=\"font-size:72px;\">{{subject_name}}</span></p>\r\n\r\n<p style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p style=\"text-align: right;\"><span style=\"font-size:72px;\">{{teacher_name}}</span></p>\r
+<p style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p
+        style=\"text-align: right;\"><span style=\"font-size:72px;\">{{ subject_name }}</span></p>\r\n\r\n<p
+        style=\"text-align: right;\">&nbsp;</p>\r\n\r\n<p style=\"text-align: right;\"><span
+        style=\"font-size:72px;\">{{ teacher_name }}</span></p>\r
